# blocksworld_single-agent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/blocksworld_single-agent/core/: __init__.py
src/blocksworld_single_agent/: cli.py
src/blocksworld_single_agent/core/: __init__.py  tool_events.py
src/blocksworld_single_agent/core/agents/: __init__.py  base.py  react_agent.py  simple_llm_agent.py
src/blocksworld_single_agent/core/mcp/: __init__.py  cleanup.py  config.py  manager.py
src/blocksworld_single_agent/core/models/: __init__.py  config.py  factory.py  tracking.py
